syntax = "proto3";

package xyz.block.ftl.timeline.v1;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "xyz/block/ftl/schema/v1/schema.proto";

option go_package = "github.com/TBD54566975/ftl/backend/protos/xyz/block/ftl/timeline/v1;timelinev1";
option java_multiple_files = true;

enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  EVENT_TYPE_LOG = 1;
  EVENT_TYPE_CALL = 2;
  EVENT_TYPE_DEPLOYMENT_CREATED = 3;
  EVENT_TYPE_DEPLOYMENT_UPDATED = 4;
  EVENT_TYPE_INGRESS = 5;
  EVENT_TYPE_CRON_SCHEDULED = 6;
  EVENT_TYPE_ASYNC_EXECUTE = 7;
  EVENT_TYPE_PUBSUB_PUBLISH = 8;
  EVENT_TYPE_PUBSUB_CONSUME = 9;
}

enum AsyncExecuteEventType {
  ASYNC_EXECUTE_EVENT_TYPE_UNSPECIFIED = 0;
  ASYNC_EXECUTE_EVENT_TYPE_CRON = 1;
  ASYNC_EXECUTE_EVENT_TYPE_PUBSUB = 2;
}

enum LogLevel {
  LOG_LEVEL_UNSPECIFIED = 0;
  LOG_LEVEL_TRACE = 1;
  LOG_LEVEL_DEBUG = 5;
  LOG_LEVEL_INFO = 9;
  LOG_LEVEL_WARN = 13;
  LOG_LEVEL_ERROR = 17;
}

message LogEvent {
  string deployment_key = 1;
  optional string request_key = 2;
  google.protobuf.Timestamp timestamp = 3;
  int32 log_level = 4;
  map<string, string> attributes = 5;
  string message = 6;
  optional string error = 7;
  optional string stack = 8;
}

message CallEvent {
  optional string request_key = 1;
  string deployment_key = 2;
  google.protobuf.Timestamp timestamp = 3;
  optional ftl.schema.v1.Ref source_verb_ref = 11;
  ftl.schema.v1.Ref destination_verb_ref = 12;
  google.protobuf.Duration duration = 6;
  string request = 7;
  string response = 8;
  optional string error = 9;
  optional string stack = 10;

  reserved 4, 5;
}

message DeploymentCreatedEvent {
  string key = 1;
  string language = 2;
  string module_name = 3;
  int32 min_replicas = 4;
  optional string replaced = 5;
}

message DeploymentUpdatedEvent {
  string key = 1;
  int32 min_replicas = 2;
  int32 prev_min_replicas = 3;
}

message IngressEvent {
  string deployment_key = 1;
  optional string request_key = 2;
  ftl.schema.v1.Ref verb_ref = 3;
  string method = 4;
  string path = 5;
  int32 status_code = 7;
  google.protobuf.Timestamp timestamp = 8;
  google.protobuf.Duration duration = 9;
  string request = 10;
  string request_header = 11;
  string response = 12;
  string response_header = 13;
  optional string error = 14;
}

message CronScheduledEvent {
  string deployment_key = 1;
  ftl.schema.v1.Ref verb_ref = 2;
  google.protobuf.Timestamp timestamp = 3;
  google.protobuf.Duration duration = 4;
  google.protobuf.Timestamp scheduled_at = 5;
  string schedule = 6;
  optional string error = 7;
}

message AsyncExecuteEvent {
  string deployment_key = 1;
  optional string request_key = 2;
  ftl.schema.v1.Ref verb_ref = 3;
  google.protobuf.Timestamp timestamp = 4;
  google.protobuf.Duration duration = 5;
  AsyncExecuteEventType async_event_type = 6;
  optional string error = 7;
}

message PubSubPublishEvent {
  string deployment_key = 1;
  optional string request_key = 2;
  ftl.schema.v1.Ref verb_ref = 3;
  google.protobuf.Timestamp timestamp = 4;
  google.protobuf.Duration duration = 5;
  string topic = 6;
  string request = 7;
  optional string error = 8;
}

message PubSubConsumeEvent {
  string deployment_key = 1;
  optional string request_key = 2;
  optional string dest_verb_module = 3;
  optional string dest_verb_name = 4;
  google.protobuf.Timestamp timestamp = 5;
  google.protobuf.Duration duration = 6;
  string topic = 7;
  optional string error = 8;
}

message Event {
  google.protobuf.Timestamp timestamp = 1;
  // Unique ID for event.
  int64 id = 2;
  oneof entry {
    LogEvent log = 3;
    CallEvent call = 4;
    DeploymentCreatedEvent deployment_created = 5;
    DeploymentUpdatedEvent deployment_updated = 6;
    IngressEvent ingress = 7;
    CronScheduledEvent cron_scheduled = 8;
    AsyncExecuteEvent async_execute = 9;
    PubSubPublishEvent pubsub_publish = 10;
    PubSubConsumeEvent pubsub_consume = 11;
  }
}
